unpackaged/main/default/objects/Spend__c/Spend__c.object-meta.xml
<CustomObject>
    <description>This object is for managing the cost of spending for Clients and Suppliers.</description>
    <label>Spend</label>
    <nameField>
        <label>Spend Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>