unpackaged/main/default/objects/Spend__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the client account the spend is related to.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Spends</relationshipLabel>
    <relationshipName>Spends</relationshipName>
    <type>Lookup</type>
</CustomField>