unpackaged/main/default/objects/Spend__c/fields/Date_of_Spend__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Spend__c</fullName>
    <inlineHelpText>Enter the date when the spend was made</inlineHelpText>
    <label>Date of Spend</label>
    <type>Date</type>
</CustomField>