unpackaged/main/default/objects/Spend__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <inlineHelpText>Select the type of event this spend is related too.</inlineHelpText>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Offsite Meeting</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Corporate Gifting</fullName>
            </value>
            <value>
                <fullName>Marketing Campaign</fullName>
            </value>
            <value>
                <fullName>Supplier Event</fullName>
            </value>
            <value>
                <fullName>Fam Trip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>