unpackaged/main/default/objects/Spend__c/fields/Spend_Amount__c.field-meta.xml
<CustomField>
    <fullName>Spend_Amount__c</fullName>
    <inlineHelpText>Enter the total amount spent for this event/record.</inlineHelpText>
    <label>Spend Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>