unpackaged/main/default/objects/Spend__c/fields/Supplier_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the supplier account this spend is related too.</inlineHelpText>
    <label>Supplier Accounts</label>
    <referenceTo>Supplier_Accounts__c</referenceTo>
    <relationshipLabel>Spends</relationshipLabel>
    <relationshipName>Spends</relationshipName>
    <type>Lookup</type>
</CustomField>