unpackaged/main/default/objects/Spend__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the user who is responsible for this spending.</inlineHelpText>
    <label>Spent By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Spends</relationshipName>
    <type>Lookup</type>
</CustomField>