unpackaged/main/default/objects/Spend__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>This is the vertical the client has been assigned in the &#39;Account&#39; object.</description>
    <formula>TEXT(Account__r.Sales_Channel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the vertical the client has been assigned in the &#39;Account&#39; object.</inlineHelpText>
    <label>Vertical</label>
    <type>Text</type>
</CustomField>