unpackaged/main/default/objects/Spend__c/recordTypes/Client_Spend.recordType-meta.xml
<RecordType>
    <fullName>Client_Spend</fullName>
    <active>true</active>
    <description>This record type is used to monitor client spend.</description>
    <label>Client Spend</label>
</RecordType>