unpackaged/main/default/objects/Spend__c/recordTypes/Supplier_Spend.recordType-meta.xml
<RecordType>
    <fullName>Supplier_Spend</fullName>
    <active>true</active>
    <description>This record type is used to monitor supplier spend.</description>
    <label>Supplier Spend</label>
</RecordType>